fix the animation slide up shifting

--- a/css/interactive-guides/pod.scss
+++ b/css/interactive-guides/pod.scss
@@ -116,15 +116,11 @@
 }
 
 @-webkit-keyframes animate-slideup {
-  0% { -webkit-transform: translateY(100%); opacity:0 }
-  65% { -webkit-transform: translateY(4%)}
-  95% { -webkit-transform: translateY(2%)}
-  100% { -webkit-transform: translateY(0%); opacity:1 }
+  from { bottom: -15px; opacity:0 } 
+  to { bottom: 0px; opacity:1 }
 }
 
 @keyframes animate-slideup { 
-  0% { transform: translateY(100%); opacity:0 }
-  65% { transform: translateY(4%)}
-  90% { transform: translate(2%)}
-  100% { transform: translateY(0%); opacity:1 }
+  from { bottom: -15px; opacity:0 } 
+  to { bottom: 0px; opacity:1 }
 }
